Updated scripts and added State contribution

--- a/Choropleth_Map_of_ROG_Districts_in_India.ipynb
+++ b/Choropleth_Map_of_ROG_Districts_in_India.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -101,12 +101,12 @@
        "      <td>State Unassigned</td>\n",
        "      <td>UN_Unassigned</td>\n",
        "      <td>Unassigned</td>\n",
-       "      <td>1096</td>\n",
-       "      <td>1096</td>\n",
+       "      <td>1620</td>\n",
+       "      <td>1620</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>282</td>\n",
-       "      <td>282</td>\n",
+       "      <td>217</td>\n",
+       "      <td>217</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
@@ -177,9 +177,9 @@
        "      <td>40</td>\n",
        "      <td>92</td>\n",
        "      <td>4</td>\n",
-       "      <td>14</td>\n",
-       "      <td>-5</td>\n",
-       "      <td>19</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -197,18 +197,18 @@
        "4     4         AP               Andhra Pradesh                 AP_Anantapur   \n",
        "\n",
        "                   District  Confirmed  Active  Recovered  Deceased  \\\n",
-       "0                Unassigned       1096    1096          0         0   \n",
+       "0                Unassigned       1620    1620          0         0   \n",
        "1                  Nicobars          0       0          0         0   \n",
        "2  North and Middle Andaman          1       0          1         0   \n",
        "3             South Andaman         32       0         32         0   \n",
        "4                 Anantapur        136      40         92         4   \n",
        "\n",
        "   Delta_Confirmed  Delta_Active  Delta_Recovered  Delta_Deceased  \\\n",
-       "0              282           282                0               0   \n",
+       "0              217           217                0               0   \n",
        "1                0             0                0               0   \n",
        "2                0             0                0               0   \n",
        "3                0             0                0               0   \n",
-       "4               14            -5               19               0   \n",
+       "4                0             0                0               0   \n",
        "\n",
        "   District_Notes  Last_Updated  \n",
        "0             NaN           NaN  \n",
@@ -386,7 +386,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1ef2311d048>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x27c58c029c8>"
       ]
      },
      "execution_count": 4,
@@ -721,9 +721,9 @@
        "      <td>1.353967e+10</td>\n",
        "      <td>8.464308e+05</td>\n",
        "      <td>POLYGON ((75.23335 21.41481, 75.23469 21.41453...</td>\n",
-       "      <td>303</td>\n",
-       "      <td>165</td>\n",
-       "      <td>105</td>\n",
+       "      <td>331</td>\n",
+       "      <td>163</td>\n",
+       "      <td>135</td>\n",
        "      <td>33</td>\n",
        "      <td>Red</td>\n",
        "    </tr>\n",
@@ -735,10 +735,10 @@
        "      <td>1.771358e+10</td>\n",
        "      <td>9.720056e+05</td>\n",
        "      <td>POLYGON ((74.13013 20.86311, 74.13215 20.86160...</td>\n",
-       "      <td>840</td>\n",
-       "      <td>166</td>\n",
-       "      <td>638</td>\n",
-       "      <td>36</td>\n",
+       "      <td>907</td>\n",
+       "      <td>221</td>\n",
+       "      <td>641</td>\n",
+       "      <td>45</td>\n",
        "      <td>Red</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -749,9 +749,9 @@
        "      <td>1.294532e+10</td>\n",
        "      <td>7.410244e+05</td>\n",
        "      <td>POLYGON ((79.75755 20.73462, 79.76047 20.73463...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
+       "      <td>15</td>\n",
+       "      <td>11</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>Orange</td>\n",
        "    </tr>\n",
@@ -763,9 +763,9 @@
        "      <td>1.547940e+10</td>\n",
        "      <td>1.014942e+06</td>\n",
        "      <td>POLYGON ((78.26132 20.69735, 78.26276 20.69717...</td>\n",
-       "      <td>101</td>\n",
-       "      <td>12</td>\n",
-       "      <td>89</td>\n",
+       "      <td>111</td>\n",
+       "      <td>20</td>\n",
+       "      <td>91</td>\n",
        "      <td>0</td>\n",
        "      <td>Red</td>\n",
        "    </tr>\n",
@@ -777,9 +777,9 @@
        "      <td>1.186387e+10</td>\n",
        "      <td>1.131732e+06</td>\n",
        "      <td>POLYGON ((78.05387 19.92452, 78.05449 19.92435...</td>\n",
-       "      <td>79</td>\n",
-       "      <td>46</td>\n",
-       "      <td>29</td>\n",
+       "      <td>92</td>\n",
+       "      <td>51</td>\n",
+       "      <td>37</td>\n",
        "      <td>4</td>\n",
        "      <td>Orange</td>\n",
        "    </tr>\n",
@@ -796,18 +796,18 @@
        "4         5  Maharashtra      Nanded  1.186387e+10  1.131732e+06   \n",
        "\n",
        "                                            geometry  Confirmed  Active  \\\n",
-       "0  POLYGON ((75.23335 21.41481, 75.23469 21.41453...        303     165   \n",
-       "1  POLYGON ((74.13013 20.86311, 74.13215 20.86160...        840     166   \n",
-       "2  POLYGON ((79.75755 20.73462, 79.76047 20.73463...          5       3   \n",
-       "3  POLYGON ((78.26132 20.69735, 78.26276 20.69717...        101      12   \n",
-       "4  POLYGON ((78.05387 19.92452, 78.05449 19.92435...         79      46   \n",
+       "0  POLYGON ((75.23335 21.41481, 75.23469 21.41453...        331     163   \n",
+       "1  POLYGON ((74.13013 20.86311, 74.13215 20.86160...        907     221   \n",
+       "2  POLYGON ((79.75755 20.73462, 79.76047 20.73463...         15      11   \n",
+       "3  POLYGON ((78.26132 20.69735, 78.26276 20.69717...        111      20   \n",
+       "4  POLYGON ((78.05387 19.92452, 78.05449 19.92435...         92      51   \n",
        "\n",
        "   Recovered  Deceased    Zone  \n",
-       "0        105        33     Red  \n",
-       "1        638        36     Red  \n",
-       "2          2         0  Orange  \n",
-       "3         89         0     Red  \n",
-       "4         29         4  Orange  "
+       "0        135        33     Red  \n",
+       "1        641        45     Red  \n",
+       "2          4         0  Orange  \n",
+       "3         91         0     Red  \n",
+       "4         37         4  Orange  "
       ]
      },
      "execution_count": 8,
@@ -909,7 +909,7 @@
    ],
    "source": [
     "# Create figure object.\n",
-    "p = figure(title = 'Red, Green and Orange Distric of Covid19: 19 May 2019',\n",
+    "p = figure(title = 'Red, Green and Orange Distric of Covid19: 21 May 2019',\n",
     "           plot_height = 700 ,\n",
     "           plot_width = 650, \n",
     "           toolbar_location = 'right',\n",
